新加仓库地址

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
+; 仓库地址 https://github.com/2827700630/platformio_STM32
 ; ========== 全局项目配置 ==========
 [platformio]
 ; 指定头文件目录路径
